--- a/packages/frontend/components/details/styles.css
+++ b/packages/frontend/components/details/styles.css
@@ -33,7 +33,8 @@
   }
 }
 
-.details__main {
+/* Use :not() selector to increase specificity over .fieldset */
+.details__main:not(#fieldset) {
   border-inline-start: var(--border-width-thickest) solid var(--color-outline);
   margin-block-start: var(--space-s);
   padding-inline-start: var(--space-m);
