--- a/packages/frontend/components/label/styles.css
+++ b/packages/frontend/components/label/styles.css
@@ -1,6 +1,7 @@
 .label {
   display: block;
   font: var(--label-font, var(--font-label));
+  margin-block-end: var(--space-xs);
 }
 
 .label__title {
