--- a/packages/frontend/components/radios/styles.css
+++ b/packages/frontend/components/radios/styles.css
@@ -1,7 +1,6 @@
 .radios {
   --radio-size: 1.5em;
   --check-size: calc(var(--radio-size) / 4);
-  --fieldset-flow-space: 0;
   --touch-target-size: 44px;
 }
 
@@ -18,6 +17,10 @@
   min-block-size: var(--radio-size);
   padding-inline-start: calc(var(--radio-size) + var(--space-s));
   position: relative;
+
+  &:last-child {
+    margin-block-end: 0;
+  }
 }
 
 .radios__input {
@@ -32,10 +35,11 @@
   z-index: 1;
 }
 
-.radios__label {
+.radios__label.label {
   --label-font: var(--font-body);
   align-items: center;
   cursor: pointer;
+  margin-block-end: 0;
   min-block-size: var(--radio-size);
   touch-action: manipulation; /* remove 300ms pause on mobile */
 
